<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/info_backdrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/info_backdrop">

            <TextView
                android:id="@+id/info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_placeholder"
                android:textSize="28sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/info_tagline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tagline_placeholder"
                android:textSize="16sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/info_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/info_rating"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:numStars="10"
                    android:rating="5" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/info_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date_placeholder"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/infoDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description_placeholder"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/info_runtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/runtime_placeholder"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>