<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/moviePoster"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/royal_blue"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteTransparent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/infoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/title_placeholder"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/infoGenre">
        </com.google.android.material.chip.ChipGroup>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <RatingBar
                android:id="@+id/infoRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="10"
                android:layout_marginEnd="20dp"
                android:rating="5"
                style="@style/Widget.AppCompat.RatingBar.Small"/>

            <TextView
                android:id="@+id/infoReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date_placeholder"
                android:textSize="16sp"/>

        </LinearLayout>


        <TextView
            android:id="@+id/infoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description_placeholder"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infoGenre" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>